<resources>
    <string name="app_name">Smartbook Fisika SMA</string>
    <string name="smartbook_fisika">Smartbook Fisika</string>
    <string name="sma">SMA</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="copyright_2017">Copyright 2017</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="teks2ml3"><![CDATA[Sedangkan fenomena listrik dimana material mengalami muatan listrik setelah terjadi kontak atau pergesekan dengan material yang berbeda dinamakan <b>Triboelectric effect</b> atau <b>Efek tribolistrik </b>. Penjelasan mengenai efek tribolistrik dapat kamu simak pada video berikut ini!]]></string>
    <string name="teks7md">
        <![CDATA[<b>Vektor medan listrik E</b> pada setiap titik di suatu ruang didefinisikan sebagai gaya listrik <b>F</b> yang bekerja pada muatan uji q0 yang ditempatkan pada suatu titik kemudian dibagi dengan muatan uji:]]>
    </string>
    <string name="teks9md">
        <![CDATA[
            <b>E</b> merupakan medan yang dihasilkan oleh beberapa muatan atau distribusi muatan yang terpisah dari muatan uji. Muatan uji berfungsi sebagai detektor adanya medan listrik."
        ]]>
    </string>
    <string name="teks36md"><![CDATA[dimana ρ mempunyai satuan Coulomb per meter kubik (C/m<sup>3</sup>).]]></string>
    <string name="teks38md"><![CDATA[dimana σ mempunyai satuan Coulomb per meter persegi (C/m<sup>2</sup>).]]></string>
    <string name="teks45md"><![CDATA[Gambar 3.7. Medan listrik di titik P yang diakibatkan sebuah batang bermuatan yang terbaring di sepanjang sumbu x. Besar dari melan listrik pada titik P yang diakibatkan muatan elementer dq adalah <b>k<sub>e</sub> dq/x<sup>2</sup></b>. Medan listrik total di titik P adalah jumlah vektor pada semua segmen dalam batang. (Sumber gambar: Serway, 2004)
    ]]></string>
    <string name="teks50md"><![CDATA[
            Karena r=(x<sup>2</sup>+a<sup>2</sup> )<sup>1/2</sup> dan <i>cos θ=x/r</i>, maka kita dapat menemukan
    ]]></string>
    <string name="teks56md"><![CDATA[
            Untuk mendapatkan medan total di titik P, kita dapat mengitegrasikan nilai d<b>E</b><sub>x</sub>, dengan batas bawah r = 0 dan batas atas r = R, sehingga
    ]]></string>
    <string name="teks58md"><![CDATA[
            Untuk memvisualisasikan medan listrik sehingga kita dapat memiliki gambaran tentang besar maupun arahnya, maka didefinisikan <b>garis medan listrik.</b>]]></string>
    <string name="teks79md">
        <![CDATA[
Jika <b>E</b> seragam (besar dan arahnya konstan), maka percepatan partikel juga konstan. <b>Jika partikel bermuatan positif, maka percepatan partikel searah dengan medan listriknya. Namun, jika partikel bemuatan negatif, maka percepatan partikel berlawanan arah dengan medan listriknya.</b>
        ]]>
    </string>
    <string name="teks84md">
        <![CDATA[
Posisi awal muatan adalah x<sub>i</sub>=0 dan v<sub>i</sub>=0 karena partikel bergerak dari keadaan diam, posisi partikel sebagai fungsi waktu adalah
        ]]>
    </string>
    <string name="teks86md">
        <![CDATA[
Karena percepatannya konstan, kita dapat menerapkan persamaan kinematika dalam 2 dimensi dengan v<sub>xi</sub>=v<sub>i</sub> dan v<sub>yi</sub>=0
        ]]>
    </string>
    <string name="teks92md">
        <![CDATA[
            Di awal bab kita telah disuguhkan gambar sebuah alat. Alat tersebut biasa dikenal dengan nama <b>Osiloskop</b>. Kali ini akan kita bahas prinsip kerja dari Osiloskop. Osiloskop menggunakan prinsip kerja dari tabung sinar katoda. Berikut ini adalah skema dari tabung sinar katoda.
        ]]>
    </string>
    <string name="teks100md">
        <![CDATA[
Gambar 3.18. Garis medan merepresentasikan medan listrik yang menembus bidang area <i>A</i> yang tegak lurus terhadap medan <b>E</b>. Fluks listrik Φ<sub>E</sub> yang melewati area ini sama dengan <i>E</i> dikali A. (Sumber gambar: Serway, 2004)
        ]]>
    </string>
    <string name="teks106md">
        <![CDATA[
Gambar 3.19. Garis medan mewakili medan listrik seragam yang menembus sebuah area <i>A</i> pada sudut <b>θ</b> terhadap medan. Karena jumlah garis yang menembus area <i>A’</i> sama jumlahnya dengan yang menembus <i>A</i>, fluks yang melewati <i>A’</i> sama dengan fluks yang melewati A dan persamaannya adalah <b>Φ<sub>E</sub>= <i>EA cos θ</i></b>.  (Sumber gambar: Serway, 2004)
        ]]>
    </string>
    <string name="teks108md">
        <![CDATA[
        Gambar 3.20. Elemen kecil dari permukaan <i><b>∆A<sub>i</sub></b></i>. Medan listrik membuat sudut <i><b>θ<sub>i</sub></b></i> dengan vektor <i><b>∆A<sub>i</sub></b></i>, normal terhadap elemen permukaan, dan fluks yang melewati elemen sebanding dengan <i><b>E<sub>i</sub> ∆A<sub>i</sub>cos θ<sub>i</sub></b></i>. (Sumber gambar: Serway, 2004)
        ]]>
    </string>
    <string name="teks109md">
        <![CDATA[
Definisi fluks pada persamaan 3.20 mempunyai arti untuk elemen area kecil. Elemen medan listrik E<sub>i</sub> membuat sudut sebesar θ<sub>i</sub> dengan vektor ∆A<sub>i</sub> (gambar 3.20). Fluks listrik ∆Φ<sub>E</sub> melalui elemen ini adalah
        ]]>
    </string>
    <string name="teks111md">
        <![CDATA[
Gambar 3.21. Permukaan tertutup dalam medan listrik. Vektor permukaan <b>∆A<sub>i</sub></b> normal terhadap permukaan dan mengarah keluar. Fluks yang melewati elemen area bisa menjadi positif (elemen ①), nol (elemen ②), atau negatif (elemen ③). (Sumber gambar: Serway, 2004)
        ]]>
    </string>
    <string name="teks112md">
        <![CDATA[
Jumlah fluks yang menembus permukaan sebanding dengan jumlah garis yang meninggalkan permukaan. Jika lebih banyak garis yang meninggalkan permukaan dibandingkan dengan yang menembus permukaan, maka total fluks adalah positif. Sebaliknya, jika lebih banyak garis yang menembus dibanding yang meninggalkan permukaan, maka fluks total adalah negatif. Menggunakan simbol ∮untuk merepresentasikan integral pada permukaan tertutup, kita dapat menuliskan fluks total Φ<sub>E</sub> yang melewati permukaan tertutup sebagai berikut
        ]]>
    </string>
    <string name="teks114md">
        <![CDATA[
        Seperti sebelumnya yang telah dibahas, di setiap titik pada permukaan, <b>E</b> paralel terhadap vektor <b>∆A<sub>i</sub></b> dan mewakili elemen permukaan <b>∆A<sub>i</sub></b> yang dikelilingi titik permukaan. Maka dari itu,
        ]]>
    </string>
    <string name="teks140md">
        <![CDATA[
Gambar 3.25. Jumlah fluks listrik yang melewati permukaan tertutup bergantung pada muatan didalam permukaan. Jumlah fluks yang melewati permukaan <i>S</i> adalah <b><i>q<sub>1</sub>/ϵ<sub>0</sub></i></b>, jumlah fluks yang melewati permukaan <i>S'</i> adalah <b>(q<sub>2</sub>+q<sub>3</sub>)/ϵ<sub>0</sub></b>, dan jumlah fluks yang melewati <i>S"</i> adalah nol. Muatan q<sub>4</sub> tidak berkontribusi terhadap fluks melalui permuaan mapun karena dia berada diluar semua permukaan. (Sumber gambar: Serway, 2004)
        ]]>
    </string>
    <string name="teks120md">
        <![CDATA[
<b>jumlah fluks yang menembus segala permukaan tertutup yang dilingkupi oleh muatan titik <i>q</i>, yaitu <i>q/ε<sub>0</sub></i>, tidak bergantung pada bentuk permukaan tersebut.</b>
        ]]>
    </string>
    <string name="teks131md">
        <![CDATA[
Untuk menerapkan Hukum Gauss dalam situasi ini, penting untuk mengenali bahwa muatan q<sub>in</sub> dalam permukaan gaussian dengan volume <i>V’</i> lebih kecil dari <i>Q</i>. Untuk menghitung q<i>in</i>, kita menggunakan fakta bahwa <i>q<sub>in</sub>=ρV'<i>;
        ]]>
    </string>
    <string name="teks142md">
        <![CDATA[Gambar 3.28. Plot grafik E terhadap r untuk bola pejal bermuatan seragam yang terisolasi. Medan listrik di dalam bola (r < a) berbanding lurus dengan r. Medan diluar bola (r > a) sama dengan muatan titik Q yang bertempat di r = 0. (Sumber gambar: Serway, 2004)
        ]]>
    </string>
    <string name="teksep6">
        <![CDATA[
        Energi potensial listrik didefinisikan sebagai berikut, jika muatan listrik <i>q</i> berada dalam ruang yang mengandung medan listrik E, maka energi potensial yang dimiliki muatan tersebut adalah
        ]]>
    </string>
    <string name="teksep7">
        <![CDATA[
Kita akan menghitung energi potensial sebuah partikel yang bermuatan q yang berada pada jarak <i>r</i> dari muatan lain sebesar <i>Q</i>. Kedua muatan sama-sama berupa titik.
<br><br>Kuat medan listrik di sekitar <i>Q</i> dapat dihitung dengan mudah dengan menggunakan hukum Coulomb. Kita dapatkan
        ]]>
    </string>
    <string name="teksep100">
        <![CDATA[
Seringkali titik acuan diambil pada jarak tak berhingga, <i>r<sub>0</sub>=∞ </i><br>, dan potensial di titik ini diambil sama dengan nol, <i>U(∞)</i> =0. Jika kita lakukan hal tersebut maka diperoleh
        ]]>
    </string>
    <string name="teksep9">
        <![CDATA[
Sebuah balon berisi helium yang bermuatan sebesar <i>q</i>= -5,5x10<sup>-8</sup> C, naik vertikal ke atas dari posisi awal <i>i</i> ke posisi akhir <i>f</i> sejauh 520 m. Medan listrik di atmosfer dekat permukaan bumi arahnya ke bawah dan besarnya seragam sebesar 150 N/C. Hitung perbedaan energi potensial listrik dari balon tersebut diantara kedua posisi <i>i</i> dan <i>f</i>.
        ]]>
    </string>
    <string name="teksep12">
        <![CDATA[
<b>Potensial listrik didefinisikan sebagai energi potensial per satuan muatan listrik</b>. Dengan menggunakan, definisi energi potensial sebelumnya, maka definisi potensial listrik menjadi
        ]]>
    </string>
    <string name="teksep16">
        <![CDATA[
        Tempat kedudukan titik-titik yang memiliki potensial listrik yang sama akan membentuk permukaan ekuipotensial, yang dapat berupa permukaan imajiner. Tidak ada usaha netto <i>W</i> yang dilakukan pada sebuah partikel bermuatan oleh medan listrik ketika partikel tersebut bergerak antara titik <i>i</i> dan titik <i>f</i> pada permukaan ekuipotensial yang sama. Hal ini didapatkan dari persamaan 4.5, bahwa <i>W</i> harus nol jika <i>V<sub>f</sub> = V<sub>i</sub></i>. Dikarenakan lintasan tidak bergantung pada usaha (sehingga tidak bergantung pula pada energi potensial dan potensial), <i>W=0</i> untuk setiap lintasan yang menghubungkan titik <i>i</i> dan titik <i>f</i> pada permukaan ekuipotensial yang diberikan.  Permukaan ekuipotensial tegak lurus pada medan listrik. Perhatikan gambar dibawah ini!
        ]]>
    </string>
    <string name="teksep17">
        <![CDATA[
        Gambar 4.2. Porsi dari 4 permukaan ekuipotensial pada potensial listrik V<sub>1</sub>=100 V, V<sub>2</sub>= 80 V, V<sub>3</sub>= 60 V, dan V<sub>4</sub>= 40 V.
        ]]>
    </string>
    <string name="teksep21">
        <![CDATA[
            Tentukan perbedaan potensial antara titik <i>i</i> dan <i>f</i> bila muatan <i>q<sub>0</sub></i> bergerak melalui <br>  a)	lintasan <i>if</i> , dan <br>b)	 lintasan <i>icf</i>
        ]]>
    </string>
    <string name="teksep24">
        <![CDATA[
Gambar 4.5. (a) Muatan uji <i>q<sub>0</sub></i> berpindah dalam garis lurus dari titik <i>i</i> menuju ke titik <i>f</i>, sepanjang arah medan listrik eksternal seragam. (b) Muatan <i>q<sub>0</sub></i> berpindah sepanjang jalur <i>icf</i> dalam medan listrik yang sama.
        ]]>
    </string>
    <string name="teksep28">
        <![CDATA[
Gambar 4.6. Beda potensial antara titik <i>A</i> dan <i>B</i> karena muatan titik <i>q</i> hanya bergantung pada koordinat awal dan akhir jari-jari <i>r<sub>A</sub></i> dan <i>r<sub>B</sub></i>. Dua buah lingkaran garis putus-putus merepresentasikan permukaan ekuipotensial.
        ]]>
    </string>
</resources>